# axiom-vault

./: index.html  package-lock.json  package.json  pau_schema.json  postcss.config.js  vite.config.js
.github/workflows/: release.yml
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: DashboardView.jsx  DetailSidebar.jsx  Login.jsx  NewExpForm.jsx  NewExpedienteModal.jsx  TableView.jsx  VisorTactico.jsx
src/config/: schema.js
src/data/: mockData.js
src/services/: dataProcessor.js  pdfService.js
src/styles/: apple-theme.css
