[package]
name = "axiom-vault"
version = "2.1.1"
description = "AXIOM VAULT - Estación de Mando de Gestión PAU"
authors = ["AXIOM Engineering"]
edition = "2021"

[lib]
name = "axiom_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2" }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"